# Karen

./: CMakeLists.txt
Karen.xcodeproj/: project.pbxproj
Karen.xcodeproj/xcuserdata/apv.xcuserdatad/xcschemes/: karen.xcscheme  xcschememanagement.plist
artwork/mockups/: widgets.graffle
cmake/: cxx11.cmake  testing.cmake
core/: CMakeLists.txt
core/include/: KarenCore.h
core/include/KarenCore/: array-inl.h  array.h  bolt.h  buffer.h  collection-inl.h  collection.h  events-inl.h  events.h  exception.h  file-posix.h  file.h  first-class.h  iterator.h  list-inl.h  list.h  map-inl.h  map.h  numeric.h  parsing.h  platform.h  pointer-inl.h  pointer.h  queue-inl.h  queue.h  set-inl.h  set.h  stream.h  string-inl.h  string.h  test.h  timing.h  types.h
core/src/: buffer.cpp  events.cpp  exception.cpp  file-posix.cpp  file.cpp  numeric.cpp  parsing.cpp  string.cpp  test.cpp  timing.cpp
core/test/: test-array.cpp  test-buffer.cpp  test-dict.cpp  test-events.cpp  test-file.cpp  test-list.cpp  test-map.cpp  test-queue.cpp  test-set.cpp  test-string.cpp
include/: app.h
include/ui/: bitmap.h  button.h  draw.h  engine.h  event.h  image.h  loop.h  timer.h  types.h  widget.h  window.h
include/ui/core/: cocoa.h  ft.h  gl.h  glut.h
include/utils/: bolt.h  buffer.h  collection-inl.h  collection.h  exception.h  file-posix.h  file.h  iterator.h  numeric.h  parsing.h  platform.h  pointer.h  stream.h  string.h  test.h  timing.h  types.h
resource/: Karen-Info.plist
src/: app.cpp
src/ui/: bitmap.cpp  button.cpp  draw.cpp  engine.cpp  event.cpp  image.cpp  types.cpp  widget.cpp
src/ui/core/: cocoa.mm  ft.cpp  gl.cpp  glut.cpp
src/utils/: buffer.cpp  exception.cpp  file-posix.cpp  file.cpp  numeric.cpp  parsing.cpp  string.cpp  test.cpp  timing.cpp
test/: test-basic-widgets.cpp  test-cocoa.cpp  test-glut.cpp  test-image.cpp  test-ui.cpp  test-utils.cpp
test-utils.cpp/: main.cpp  test_utils_cpp.1
ui/: CMakeLists.txt
ui/include/: bitmap.h  button.h  draw.h  widget.h
ui/include/KarenUI/: app.h  bitmap.h  button.h  color.h  draw.h  engine.h  euclidean.h  event.h  loop.h  pixel.h  timer.h  types.h  widget.h  window.h
ui/include/KarenUI/core/: cocoa.h  ft.h  gl.h  glut.h
ui/include/core/: gl.h
ui/src/: app.cpp  bitmap.cpp  button.cpp  color.cpp  draw.cpp  engine.cpp  euclidean.cpp  event.cpp  pixel.cpp  types.cpp  widget.cpp
ui/src/core/: cocoa.mm  ft.cpp  gl.cpp  glut.cpp
ui/test/: test-basic-widgets.cpp  test-cocoa.cpp  test-glut.cpp  test-image.cpp  test-ui.cpp
